complete hypthesis test

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -1444,7 +1444,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Ho = There is no difference in NO2 values between March 2019 and March 2020.\n",
+    "\n",
+    "Ha= NO2 values are comparatively less during March 2020."
+   ]
   }
  ],
  "metadata": {
